--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Image Search Engine</title>
+  <title>Image-Search</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1 class="title"><b><u>imageSearch</u></b></h1>
+    <h1 class="title"><b><u>Image-Search</u></b></h1>
     <div class="auth-buttons">
       <!-- <button class="btn" onclick="openAuthModal('login')">Login</button>
       <button class="btn" onclick="openAuthModal('register')">Register</button> -->
